<project xmlns="http://maven.apache.org/POM/4.0.0">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.dakusui</groupId>
  <artifactId>autotest-tt</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>autotest-tt</name>
  <url>https://github.com/dakusui/simple-tt</url>
  <properties>
    <opentest4j.version>1.2.0</opentest4j.version>
    <junit-jupiter-engine.version>5.10.1</junit-jupiter-engine.version>
    <junit-jupiter-api.version>5.10.1</junit-jupiter-api.version>
    <junit-platform-launcher.version>1.10.2</junit-platform-launcher.version>
    <!-- BEGIN: test dependencies -->
    <!-- END: test dependencies -->

    <insdog-all.version>0.5.2</insdog-all.version>
    <valid8j.version>2.1.7</valid8j.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>com.github.dakusui</groupId>
      <artifactId>insdog-all</artifactId>
      <version>${insdog-all.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.github.dakusui</groupId>
          <artifactId>valid8j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.github.dakusui</groupId>
          <artifactId>processstreamer</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.dakusui</groupId>
      <artifactId>processstreamer</artifactId>
      <version>2.0.5</version>
    </dependency>
    <dependency>
      <groupId>com.github.dakusui</groupId>
      <artifactId>valid8j</artifactId>
      <version>${valid8j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.opentest4j</groupId>
      <artifactId>opentest4j</artifactId>
      <version>${opentest4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter-engine.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-jupiter-api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>${junit-platform-launcher.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit-jupiter-api.version}</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>
            -Aproject=${project.groupId}/${project.artifactId}
            <arg>--add-reads</arg>
            <arg>com.github.dakusui.autotest=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
